# pivro

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
environments/common/: CMakeLists.txt
environments/linux_x86_64/: CMakeLists.txt
environments/pico/: CMakeLists.txt
examples/display/: circles_display_example.c  squares_display_example.c
hal/: CMakeLists.txt
hal/display/: CMakeLists.txt
hal/display/include/pivro/: display.h
hal/display/linux/: CMakeLists.txt
hal/display/linux/x86_64/: CMakeLists.txt  linux_x86_64_pivro_display_hal.c
hal/display/pico/: CMakeLists.txt  pico_ili9341_pivro_display_hal.c
hal/hardware/pico/: CMakeLists.txt  sleep.c
hal/time/: CMakeLists.txt
hal/time/include/pivro/: time.h
hal/time/linux/x86_64/: CMakeLists.txt  linux_x86_64_pivro_time_hal.c
hal/time/pico/: CMakeLists.txt  pico_pivro_time_hal.c
products/: CMakeLists.txt
products/linux/x86_64/: CMakeLists.txt  main.c
products/pico/: CMakeLists.txt  main.c
scripts/: environment.sh
